@@ -31,6 +31,8 @@ requires:
   Class::Utils: 0.03
   English: 0
   Error::Pure: 0.08
+  File::Temp: 0
+  IO::Barf: 0.04
   Pod::Example: 0.03
   Readonly: 0
   perl: 5.6.0
