@@ -15,6 +15,8 @@ readme_from 'Example.pm';
 requires 'Class::Utils' => 0.03;
 requires 'English' => 0;
 requires 'Error::Pure' => 0.08;
+requires 'File::Temp' => 0;
+requires 'IO::Barf' => 0.04;
 requires 'Pod::Example' => 0.03;
 requires 'Readonly' => 0;
 requires 'perl' => '5.6.0';
