@@ -61,7 +61,8 @@ CAVEATS
     Examples with die() cannot process, because returns bad results.
 
 DEPENDENCIES
-    Class::Utils, English, Error::Pure, Pod::Example, Readonly.
+    Class::Utils, English, Error::Pure, File::Temp, IO::Barf, Pod::Example,
+    Readonly.
 
 REPOSITORY
     <https://github.com/tupinek/App-Pod-Example>
