@@ -2,6 +2,7 @@
  - Add 'readme_from' directive to Makefile.PL.
  - Add minimal Perl version.
  - Rename pod_example to pod-example.
+ - Rewrite running of example from eval() to system() on temporary file.
 
 0.08 2013-11-06
  - Fix dependency for Test::Output. Test::Output qw(1.01) is bad.
